--- a/index.html
+++ b/index.html
@@ -122,6 +122,22 @@
 
       <div class="container-fluid">
 
+        <div class="modal fade" id="exampleModal" aria-hidden="true" style="display: none;">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title">2022 Subaru National Business Conference Charitable Donations</h5>
+                <button type="button" class="close bg-transparent border-0 fs-4" data-bs-dismiss="modal"
+                  aria-label="Close">
+                  <span aria-hidden="true">×</span>
+                </button>
+              </div>
+              <div class="modal-body" id="yt-player1">
+                <iframe width="100%" height="315" src="./assets/videos/subaru.mp4" allowfullscreen=""></iframe>
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- ============================================================== -->
         <!-- Welcome -->
         <!-- ============================================================== -->
@@ -135,14 +151,14 @@
               <div class="row ">
                 <!-- Column -->
                 <div class="col-lg-6" data-aos="flip-up" data-aos-duration="1200">
+
                   <div class="card card-shadow" data-aos="flip-up" data-aos-duration="1200">
-                    <img class="card-img-top video-img" src="assets/images/ui/video.jpg" alt="wrappixel kit">
-                    <div class="embed-responsive hide embed-responsive-16by9" data-animation="animated fadeIn">
-                      <iframe width="560" height="315"
-                        src="https://www.youtube.com/embed/TPt4m7i9dRk?rel=0&amp;showinfo=0"
-                        allowfullscreen=""></iframe>
-                    </div>
+                    <a href="javascript:void(0)" class="text-white display-4" data-bs-toggle="modal"
+                      data-bs-target="#exampleModal">
+                      <img class="card-img-top video-img" src="assets/images/subru/video-thumb.png" alt="Subru Video ">
+                    </a>
                   </div>
+
                 </div>
                 <!-- Column -->
                 <div class="col-lg-6 mt-4 mt-lg-0">
